# nx-bazel-plugin

./: BUILD.bazel  README.md  WORKSPACE.bazel  nx.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/: workflows
.github/workflows/: main.yaml
