load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_js//npm:defs.bzl", "npm_link_package")

npm_link_all_packages(name = "node_modules")

ts_config(
    name = "tsconfigBase",
    src = "tsconfig.base.json",
    visibility = [":__subpackages__"],
)


